# alien

./: .gitignore  Makefile  Makefile.am  Makefile.win  Makefile.win64  README  alien-cvs-1.rockspec  alien.c  alien.rockspec.in  bootstrap  bootstrap.conf  configure.ac  constants  constants.lua  index.html
ffcall/: Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  NEWS  PLATFORMS  README  README.os2  README.win32  configure  configure.in  executables  ffcall.spec  install-check-results
ffcall/autoconf/: aclocal.m4
ffcall/avcall/: DOC  Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PLATFORMS  README  asmarm.h  asmm68k.h  avcall-alpha.c  avcall-alpha.s  avcall-arm.c  avcall-convex.c  avcall-convex.s  avcall-hppa.c  avcall-hppa.s  avcall-i386-macro.S  avcall-i386.c  avcall-ia64.c  avcall-ia64.s  avcall-m68k-amiga.c  avcall-m68k-amiga.s  avcall-m68k.c  avcall-m68k.mit.S  avcall-m68k.mot.s  avcall-m88k.c  avcall-m88k.s  avcall-mips.c  avcall-mips64.c  avcall-mipsn32.c  avcall-rs6000-aix.new.s  avcall-rs6000-aix.old.s  avcall-rs6000-linux.s  avcall-rs6000-macos.s  avcall-rs6000-sysv4.s  avcall-rs6000.c  avcall-s390.c  avcall-s390.s  avcall-sparc.c  avcall-sparc64.c  (+11 more)
ffcall/avcall/tests.output/: hppa1.0-hp-hpux8.00-gcc252  hppa1.0-hp-hpux8.00-gcc263  hppa2.0-hp-hpux10.20-gcc  i386-pc-win32-gcc  ia64-unknown-linux-gcc  mips-dec-ultrix4.4-gcc  mips-sgi-irix6.2-cc-64  mips-sgi-irix6.2-cc-64.README  mips-sgi-irix6.4-cc-64.README  mips-sgi-irix6.4-cc-n32-O.README  mips-sgi-irix6.5-gcc  rs6000-ibm-aix3.2.5-gcc  rs6000-ibm-aix4.2.0.0-gcc  rs6000-ibm-aix4.2.0.0-gcc-freg-struct-return  sparc-sun-solaris2.4-gcc-freg-struct-return  sparc-sun-solaris2.4-gcc-freg-struct-return.README
ffcall/callback/: MIGRATION  Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PLATFORMS  README  call-used-registers  callback.3  callback.h.in  callback.html  callback.man  configure  configure.in  minitests.c  tests.c
ffcall/callback/tests.output/: ia64-unknown-linux-gcc  mips-sgi-irix6.4-cc-64-O  mips-sgi-irix6.4-cc-n32-O  mips-sgi-irix6.5-gcc  powerpc-ibm-aix4.1.4.0-xlc  rs6000-ibm-aix3.2.5-cc  rs6000-ibm-aix3.2.5-gcc  rs6000-ibm-aix4.2.0.0-gcc
ffcall/callback/trampoline_r/: Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PORTING  README  asmsparc.h  cache-alpha.s  cache-convex.c  cache-rs6000-macos.s  cache-rs6000-sysv4.s  cache-sparc.c  configure  configure.in  proto-alpha.s  proto-arm.s  proto-convex.s  proto-hppa.s  proto-i386.s  proto-ia64.s  proto-m68k.s  proto-m88k.s  proto-mips.s  proto-mips.s.gcc263  proto-mips64.s  proto-mips64.s.gcc263  proto-mipsn32.s  proto-rs6000-aix.new.s  proto-rs6000-aix.old.s  proto-rs6000-macos.s  proto-rs6000-sysv4.s  proto-s390.s  proto-sparc.s  proto-sparc.s.gcc263  proto-sparc64.s  proto-x86_64.s  proto.c  proto64.c  test1.c  test2.c  (+26 more)
ffcall/callback/vacall_r/: Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  README  asmarm.sh  asmi386.sh  asmm68k.sh  asmmips.sh  asmsparc.sh  asmsparc64.sh  configure  configure.in  misc.c  structcpy.c  vacall-alpha.s  vacall-arm.c  vacall-convex.s  vacall-hppa.c  vacall-hppa.s  vacall-i386-macro.S  vacall-i386-msvc.c  (+20 more)
ffcall/configurations/: README  alpha-dec-osf3.0-cc  alpha-dec-osf4.0-cc-O  alpha-dec-osf4.0-gcc  alpha-dec-osf4.0a-gcc  alpha-dec-osf4.0d-cc-O  alpha-dec-osf4.0d-gcc  alpha-dec-osf4.0d-gcc-fpcc-struct-return  alpha-dec-osf4.0d-gcc-freg-struct-return  hppa1.0-hp-hpux8.00-c89  hppa1.0-hp-hpux8.00-cc  hppa1.0-hp-hpux8.00-cc-Aa  hppa1.0-hp-hpux8.00-gcc  hppa1.1-hp-hpux10.01-cc-O  hppa1.1-hp-hpux9.05-cc-O  hppa2.0-hp-hpux10.20-cc  hppa2.0-hp-hpux10.20-cc-Ae  hppa2.0-hp-hpux10.20-cc-O+DA1.1  hppa2.0-hp-hpux10.20-gcc  hppa2.0-hp-hpux10.20-gcc-fpcc-struct-return  hppa2.0-hp-hpux10.20-gcc-freg-struct-return  i386-pc-solaris2.6-cc-O  i386-pc-solaris2.6-gcc  i386-pc-solaris2.6-gcc-fpcc-struct-return  i386-pc-solaris2.6-gcc-freg-struct-return  i386-unknown-sysv4.0-gcc  i386-unknown-sysv4.0-usr_bin_cc  i386-unknown-sysv4.0-usr_ucb_cc  i486-unknown-linux-gcc  i486-unknown-linux-gcc-traditional  i486-unknown-sco3.2v4.2-cc-Of  i486-unknown-sco3.2v4.2-cc-Of-Om  i486-unknown-sco3.2v4.2-gcc  i486-unknown-sco3.2v4.2-rcc  i586-pc-beos-gcc  i686-pc-linuxlibc6-gcc  i686-pc-linuxlibc6-gcc-fpcc-struct-return  i686-pc-linuxlibc6-gcc-freg-struct-return  ia64-unknown-linux-gcc  m68k-next-nextstep3-cc  (+72 more)
ffcall/m4/: cc-gcc.m4  cc-void.m4  ffcall-codeexec.m4  ffcall-ireg.m4  ffcall-pccstruct.m4  ffcall-smallstruct.m4  general.m4  getpagesize.m4  install.m4  libtool.m4  ln.m4  longlong.m4  mach-vm.m4  mmap.m4  mprotect.m4  openflags.m4  ranlib.m4  shm.m4  stdc-headers.m4
ffcall/trampoline/: Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PLATFORMS  README  cache-alpha.c  cache-convex.s  cache-hppa.c  cache-hppa.s  cache-rs6000.c  cache-sparc.c  cache.c  config.h.in  config.h.msvc  configure  configure.in  protexec.c  proto-alpha.s  proto-arm.s  proto-convex.s  proto-hppa.s  proto-i386.s  proto-ia64.s  proto-m68k.s  proto-m88k.s  proto-mips.s  proto-mips.s.gcc263  proto-mips64.s  proto-mips64.s.gcc263  proto-mips64.s.gcc272  proto-mipsn32.s  proto-rs6000-aix.new.s  proto-rs6000-aix.old.s  proto-rs6000-macos.s  proto-rs6000-sysv4.s  proto-s390.s  proto-sparc.s  proto-sparc.s.gcc263  proto-sparc64.s  (+33 more)
ffcall/vacall/: Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PLATFORMS  README  asmi386.h  asmmips.h  config.h.mingw32  configure  configure.in  misc.c  reg-struct-return  tests.c  vacall-alpha.c  vacall-alpha.s  vacall-convex.c  vacall-convex.s  vacall-hppa.s  vacall-i386-macro.S  vacall-i386-msvc.c  vacall-ia64.s  vacall-m68k.mit.S  vacall-m68k.mot.s  vacall-m88k.s  vacall-mips.c  vacall-mips64.c  vacall-mipsn32.c  vacall-rs6000-aix.new.s  vacall-rs6000-aix.old.s  vacall-rs6000-linux.s  vacall-rs6000-macos.s  vacall-rs6000-sysv4.s  vacall-rs6000.c  vacall-s390.c  vacall-s390.s  vacall-sparc.c  vacall-x86_64.s  vacall.3  vacall.h.in  (+3 more)
src/alien/: Makefile.am  core.c  core.def  struct.c  struct.def
tests/: Makefile.am  alientest.c  test_alien.lua
(+127 files in other folders)
