dnl  AUTOCONF configuration for FFCALL
dnl  Bruno Haible 24.10.1997
dnl
AC_INIT(trampoline/trampoline.h.in)
AC_PROG_MAKE_SET
dnl This piece of sed script replaces every line containing '@subdir@'
dnl by several consecutive lines, each referencing one subdir.
extrasub="$extrasub"'
/@subdir@/{
h
g
s/@subdir@/avcall/
p
g
s/@subdir@/vacall/
p
g
s/@subdir@/trampoline/
p
g
s/@subdir@/callback/
p
d
}
'
CL_CONFIG_SUBDIRS(avcall vacall trampoline callback)
AC_OUTPUT(Makefile)
