dnl  AUTOCONF configuration for VACALL
dnl  Bruno Haible 2000-04-02
dnl
AC_INIT(vacall_r.h.in)
AC_CONFIG_HEADER(vacall_r.h config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_CC_GCC
CL_AS_UNDERSCORE
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
CL_PROG_CP
CL_PROG_LN
CL_CANONICAL_HOST(../../autoconf)
CL_CANONICAL_HOST_CPU_FOR_FFCALL
PACKAGE=callback
AM_DISABLE_SHARED
AM_PROG_LIBTOOL
dnl See above. Avoid duplicate warning.
dnl CL_CANONICAL_HOST(../../autoconf)
dnl CL_CANONICAL_HOST_CPU_FOR_FFCALL
CL_PCC_STRUCT_RETURN
CL_SMALL_STRUCT_RETURN
CL_IREG_FLOAT_RETURN
CL_LONGLONG
AC_C_CHAR_UNSIGNED
AC_OUTPUT(Makefile)
